@@ -24,7 +24,6 @@ import org.jackhuang.hmcl.util.io.FileUtils;
 import java.io.IOException;
 import java.nio.file.Path;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static org.jackhuang.hmcl.util.logging.Logger.LOG;
 
@@ -182,9 +181,9 @@ public final class LocalModFile implements Comparable<LocalModFile> {
                 .filter(version -> version.getLoaders().contains(getModLoaderType()))
                 .filter(version -> version.getDatePublished().compareTo(currentVersion.get().getDatePublished()) > 0)
                 .sorted(Comparator.comparing(RemoteMod.Version::getDatePublished).reversed())
-                .collect(Collectors.toList());
+                .toList();
         if (remoteVersions.isEmpty()) return null;
-        return new ModUpdate(repository, this, currentVersion.get(), remoteVersions);
+        return new ModUpdate(repository, this, currentVersion.get(), remoteVersions.get(0));
     }
 
     @Override
@@ -206,13 +205,13 @@ public final class LocalModFile implements Comparable<LocalModFile> {
         private final RemoteModRepository repository;
         private final LocalModFile localModFile;
         private final RemoteMod.Version currentVersion;
-        private final List<RemoteMod.Version> candidates;
+        private final RemoteMod.Version candidate;
 
-        public ModUpdate(RemoteModRepository repository, LocalModFile localModFile, RemoteMod.Version currentVersion, List<RemoteMod.Version> candidates) {
+        public ModUpdate(RemoteModRepository repository, LocalModFile localModFile, RemoteMod.Version currentVersion, RemoteMod.Version candidate) {
             this.repository = repository;
             this.localModFile = localModFile;
             this.currentVersion = currentVersion;
-            this.candidates = candidates;
+            this.candidate = candidate;
         }
 
         public RemoteModRepository getRepository() {
@@ -227,8 +226,8 @@ public final class LocalModFile implements Comparable<LocalModFile> {
             return currentVersion;
         }
 
-        public List<RemoteMod.Version> getCandidates() {
-            return candidates;
+        public RemoteMod.Version getCandidate() {
+            return candidate;
         }
     }
 
